# webq

./: README.md
webq/: .gitignore  pyproject.toml  webq.sh
webq-cli/: pyproject.toml
webq/webq/: api.py  app.py  config.py  context.py  db.py  main.py  service.py  storage.py
webq/webq/api/: auth.py
webq/webq/model/: db.py  dto.py  setting.py
