[tool.poetry]
name = "webq"
version = "0.0.1"
description = ""
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
